Adds specs for order hooks

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -221,6 +221,11 @@ Metrics/ParameterLists:
 Metrics/PerceivedComplexity:
   Enabled: false
 
+Metrics/BlockLength:
+  Exclude:
+    - 'solidus_drip.gemspec'
+    - 'spec/**/*'
+
 Bundler/DuplicatedGem:
   Exclude:
     - 'Gemfile'
