--- a/.gem_release.yml
+++ b/.gem_release.yml
@@ -2,4 +2,4 @@ bump:
   recurse: false
   file: 'lib/solidus_drip/version.rb'
   message: Bump SolidusDrip to %{version}
-  branch: true
+  tag: true
